added JAXB dependencies bumped up snakeyaml version and minor bug fixes